'fix logo top cutoff in firefox'

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -72,7 +72,7 @@ a:hover {
   .pbcore-logo {
     margin-left:5vw;
     margin-top: 4.2vh;
-    margin-bottom: 2em;
+    margin-bottom: -2em;
     padding-bottom:11.2vh;
     overflow-y:visible;
     display: block;
